# test-cpp

libs/: IO_lib.lib
source/: CMakeLists.txt  bin_loader.cpp  bin_loader.h  funcs.h  funcs_test.cpp  funcs_test.h  load_csv.cpp  load_csv.h  main.cpp  test.cpp  test.h  tools.cpp  tools.h
source/io_lib/: CMakeLists.txt  bin_writer.cpp  bin_writer.h  csv_loader.cpp  csv_loader.h  tools.cpp  tools.h
test/: test.csv
